--- a/TwoChange/app/src/main/res/layout/product_item_view.xml
+++ b/TwoChange/app/src/main/res/layout/product_item_view.xml
@@ -1,40 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:padding="4dp">
 
-    <android.support.v7.widget.CardView
+    <ImageView
+        android:id="@+id/product_item_image"
+        android:layout_width="72dp"
+        android:layout_height="72dp"
+        android:scaleType="centerCrop"
+        android:src="@mipmap/placeholder"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"/>
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        app:cardCornerRadius="4dp">
+        android:layout_height="72dp"
+        android:orientation="vertical"
+        android:layout_toEndOf="@id/product_item_image"
+        android:layout_toStartOf="@+id/product_item_rating"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp">
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/product_item_title"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="36dp"
+            android:gravity="bottom"
+            android:text="Mac Book 13 pulgadas 2012 i5 16GB de RAM"
+            android:textSize="18sp"
+            android:textColor="@color/black" />
 
-            <ImageView
-                android:id="@+id/product_item_image"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:adjustViewBounds="true"
-                android:src="@mipmap/placeholder"/>
+        <TextView
+            android:id="@+id/product_item_category"
+            android:layout_width="match_parent"
+            android:layout_height="36dp"
+            android:gravity="center_vertical"
+            android:text="PC/Laptiop"
+            android:textSize="14sp" />
 
-            <TextView
-                android:id="@+id/product_item_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:textSize="16sp"
-                android:textColor="@color/black" />
+    </LinearLayout>
 
-        </LinearLayout>
+    <TextView
+        android:id="@+id/product_item_rating"
+        android:layout_width="wrap_content"
+        android:layout_height="72dp"
+        android:textSize="32sp"
+        android:textColor="@color/black"
+        android:gravity="center"
+        android:text="90"
+        android:layout_alignParentEnd="true"/>
 
-    </android.support.v7.widget.CardView>
 
-
-</LinearLayout>
+</RelativeLayout>
