--- a/TwoChange/app/src/main/res/layout/add_fragment_products_list.xml
+++ b/TwoChange/app/src/main/res/layout/add_fragment_products_list.xml
@@ -9,4 +9,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/add_product_fab"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="16dp"
+        android:src="@drawable/ic_plus_white_24dp"/>
+
 </RelativeLayout>
